--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy New Year</title>
-</head>
-<body>
-    <header>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="banner-container">
+        <div class="header-item">
+          <h4 class="upper-title">Happy New Year</h4>
+          <h2 class="lower-title">New Year Party<br />Celebration</h2>
+        </div>
+      </div>
     </header>
     <main>
-
+      <section>
+        <div class="discount-part">
+          <h1 class="discount-heading">65% OFF</h1>
+          <h5 class="discount-title">OUR HOLIDAY DEALS ARE BETTER</h5>
+          <h5 class="discount-categories">ALL CATEGORIES</h5>
+          <img
+            class="new-year-img"
+            src="images/New Year Photo.png"
+            alt="new year image"
+          />
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
