updated party section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
           />
         </div>
       </section>
+      <section class="party">
+        <div class="party-container">
+          <div class="party-heading">
+            <h1 class="party-title">Welcome to<br />midnight party</h1>
+            <p class="party-description">
+              The air crackles with an electric anticipation, a fizzy champagne
+              thrill that coats the tongue of the night.<br />It's New Year's
+              Eve, and a midnight party throbs to life, a kaleidoscope of
+              laughter and light.
+            </p>
+            <h5 class="party-join">JOIN NOW</h5>
+          </div>
+          <div class="party-heading">
+            <img
+              class="new-year-font-img"
+              src="/images/Group 70.png"
+              alt="2024"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
