--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
           </div>
         </div>
       </section>
+      <section class="schedule">
+        <div class="schedule-section">
+          <div class="schedule-sub-section">
+            <h4 class="schedule-title">
+              <span class="schedule-title-head">Place: </span>New Park Hotel<br />
+              <span class="schedule-title-head">Date: </span>31 December Night
+              2023<br />
+              <span class="schedule-title-head">Time: </span>Evening 7.30 pm to
+              12.30 am
+            </h4>
+            <button class="schedule-btn">JOIN NOW</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
