--- a/index.html
+++ b/index.html
@@ -69,6 +69,51 @@
           </div>
         </div>
       </section>
+      <section class="gift-title">
+        <div class="gift-title-container">
+          <h5 class="gift-title-heading">THE BEST GIFTS</h5>
+          <h1 class="gift-heading-title">Our Awesome Portfolio</h1>
+          <p class="gift-title-description">
+            This portfolio showcases my passion for crafting heartfelt gifts.
+            Each piece, from cozy knits to whimsical pottery.
+          </p>
+        </div>
+      </section>
+      <section class="gift-img">
+        <div class="gift-img-section">
+          <img src="/images/Rectangle 3.png" alt="" class="gift-img-photo" />
+          <img src="/images/Rectangle 4.png" alt="" class="gift-img-photo" />
+          <img src="/images/Rectangle 5.png" alt="" class="gift-img-photo" />
+          <br />
+          <img src="/images/Rectangle 6.png" alt="" class="gift-img-photo" />
+          <img src="/images/Rectangle 7.png" alt="" class="gift-img-photo" />
+          <img src="/images/Rectangle 8.png" alt="" class="gift-img-photo" />
+        </div>
+      </section>
+      <section class="subscribe">
+        <div class="subscribe-section">
+          <div class="subscribe-sub-section">
+            <img src="/images/Group 61.png" alt="" class="subscribe-email" />
+            <br />
+            <h1 class="subscribe-heading">Subscribe Newsletter</h1>
+            <p class="subscribe-description">
+              Elevate gifting from ordinary to extraordinary with every package
+              you wrap, thanks to the inspiration<br />and insider tips
+              delivered straight to your inbox.
+            </p>
+            <div class="placehold-btn-section">
+              <label for="">
+                <input
+                  type="email"
+                  placeholder="user@gmail.com"
+                  class="subscribe-placeholder"
+                />
+                <button class="subscribe-btn">Subscribe</button>
+              </label>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
