--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <div class="footer-section">
+          <div class="footer-sub-section">
+            <p class="footer-address">
+              44, Big Building Roosevelt Street Beach Gardens Florida 33410
+            </p>
+            <div>
+              <p class="footer-call">
+                <img class="footer-call-pic" src="/images/Call.png" alt="" />
+                +00 123 584 124
+              </p>
+              <br />
+              <p class="footer-site">
+                <img src="/images/Website.png" alt="" /> www.website.com
+              </p>
+            </div>
+          </div>
+          <hr />
+          <div class="footer-icon">
+            <img class="icon-pic" src="/images/Facebook.png" alt="" />
+            <img class="icon-pic" src="/images/Instagram.png" alt="" />
+            <img class="icon-pic" src="/images/Twitter.png" alt="" />
+            <img class="icon-pic" src="/images/Linkedin.png" alt="" />
+          </div>
+          <hr />
+          <div class="footer-down-section">
+            <p class="footer-rights">2017, All Rights Reserved.</p>
+            <p class="footer-rights">Unsubscribe</p>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
